Finished about page html, jsx, and route

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,12 @@
 
 {% block title %}About the Author{% endblock %}
 
-{% block content %}
 
-
+{% block js %}
+    <script src="/static/js/about.jsx" type="text/jsx"></script>
 {% endblock %}
+
+{% block body %}
+<div id="balloonicorn-info"></div>
+{% endblock %}
+
